--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint . --ext .vue,.js,.ts,.jsx,.tsx --fix",
@@ -16,10 +16,12 @@
   "dependencies": {
     "axios": "^1.3.1",
     "pinia": "^2.0.30",
+    "vant": "^4.0.10",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
+    "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.50.0",
     "@typescript-eslint/parser": "^5.50.0",
     "@vitejs/plugin-vue": "^4.0.0",
@@ -36,7 +38,10 @@
     "prettier": "^2.8.3",
     "sass": "^1.58.0",
     "typescript": "^4.9.5",
+    "unplugin-auto-import": "^0.13.0",
+    "unplugin-vue-components": "^0.23.0",
     "vite": "^4.1.0",
+    "vite-plugin-style-import": "^2.0.0",
     "vue-tsc": "^1.0.24"
   }
 }
