--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,13 +14,24 @@
       "DOM"
     ],
     "skipLibCheck": true,
-    "noEmit": true
+    "noEmit": true,
+    "baseUrl": "./",
+    "paths": {
+      "@/*": [
+        "./src/*"
+      ]
+    }
   },
   "include": [
     "src/**/*.ts",
     "src/**/*.d.ts",
     "src/**/*.tsx",
     "src/**/*.vue",
+    "./components.d.ts",
+    "./auto-imports.d.ts",
+  ],
+  "exclude": [
+    "node_modules",
   ],
   "references": [
     {
