--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "*.{vue,js,ts}": "eslint --fix"
   },
   "dependencies": {
+    "@vueuse/core": "^9.12.0",
     "axios": "^1.3.1",
     "pinia": "^2.0.30",
     "vant": "^4.0.10",
