--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@vueuse/core": "^9.12.0",
+    "ant-design-vue": "^3.2.15",
     "axios": "^1.3.1",
     "pinia": "^2.0.30",
     "vant": "^4.0.10",
@@ -47,13 +48,16 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-vue": "^9.9.0",
     "husky": "^8.0.0",
+    "less": "^4.1.3",
     "lint-staged": "^13.1.0",
+    "mock": "^0.1.1",
     "prettier": "^2.8.3",
     "sass": "^1.58.0",
     "typescript": "^4.9.5",
     "unplugin-auto-import": "^0.13.0",
     "unplugin-vue-components": "^0.23.0",
     "vite": "^4.1.0",
+    "vite-plugin-mock": "^2.9.6",
     "vite-plugin-style-import": "^2.0.0",
     "vue-tsc": "^1.0.24"
   }
